# chatfield

./: .gitignore  CLAUDE.md  Makefile  PLAN.md  README.md  example_dev.py  example_dialogue.py  example_field_proxy.py  example_gatherer.py  example_str_capabilities.py  example_types.py  job_interview.py  minimal.ts  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  restaurant_order.py  run_real_api.py  run_real_api.ts  run_real_api_js.js  run_vibes.py  setup.py  sync.md  test_interview_simple.js  tsconfig.json
.claude/: settings.json
.claude/agents/: claude-md-maintainer.md  cross-language-sync-fixer.md  cross-language-sync.md  dual-language-sync-fixer.md
.claude/hooks/: venv_check.sh
Documentation/: TEST_HARMONIZATION.md
chatfield/: CLAUDE.md  __init__.py  agent.py  base.py  builder.py  conversation.py  decorators.py  evaluator.py  field_proxy.py  gatherer.py  interview.py  interviewer.py  llm_backend.py  match.py  presets.py  pyproject.toml  serialization.py  socrates.py  types.py  visualization.py
chatfield-js/: CLAUDE.md  JS_CONVERSION_PLAN.md  demo.js  jest.config.js  package-lock.json  package.json  tsconfig.run.json  tsconfig.test.json
chatfield-js/examples/: CLAUDE.md  basic-usage.ts  decorator-react.tsx  decorator-usage.ts  favorite-number.ts  restaurant-order.ts  schema-based.ts  type-safe-demo.ts
chatfield-js/src/: builder-types.ts  builder-v2.ts  builder.ts  decorators.ts  index.ts  interview.ts  interviewer.ts  types.ts
chatfield-js/src/backends/: llm-backend.ts
chatfield-js/src/builders/: field-builder.ts  gatherer-builder.ts  schema-builder.ts
chatfield-js/src/core/: conversation.ts  field-proxy.ts  gatherer.ts  interview.ts  interviewer.ts  metadata.ts  types.ts
chatfield-js/src/decorators/: index.ts
chatfield-js/src/integrations/: CLAUDE.md  copilotkit.tsx  react.ts
chatfield-js/tests/: CLAUDE.md  builder.test.ts  conversations.test.ts  custom_transformations.test.ts  field_proxy.test.ts  interview.test.ts  interviewer.test.ts  interviewer_conversation.test.ts  test_builder.ts  test_builder_dynamic.ts  test_builder_modes.ts  test_builder_v2.ts  test_custom_transformations.test.ts  test_custom_transformations.ts  test_dialogue_class.ts  test_interviewer.test.ts
chatfield-js/tests/integration/: react.test.tsx  react.ts
chatfield-py/: CLAUDE.md  MANIFEST.in  pyproject.toml
chatfield-py/chatfield/: __init__.py  builder.py  field_proxy.py  interview.py  interviewer.py  visualization.py
chatfield-py/examples/: CLAUDE.md  favorite_number.py
chatfield-py/tests/: CLAUDE.md  test_builder.py  test_conversations.py  test_custom_transformations.py  test_field_proxy.py  test_interview.py  test_interviewer.py  test_interviewer_conversation.py
chatfield/chatfield/: decorators.py  interview.py  interviewer.py  serialization.py
chatfield/examples/: job_interview.py  tech_request.py
chatfield/tests/: test_builder.py  test_custom_transformations.py  test_dialogue_fields.py  test_interviewer.py  test_types.py
examples/: README.md  job-interview.ts  restaurant_order.py
src/: index.ts
src/builders/: field-builder.ts  gatherer-builder.ts
src/core/: interview.ts  interviewer.ts  metadata.ts  types.ts
src/integrations/: react-components.tsx  react.ts
tests/: builder.test.ts  conversation.test.ts  decorator-integration.test.ts  decorators.test.ts  field-proxy.test.ts  integration.test.ts  llm-backend.test.ts  metadata.test.ts  test_builder.test.ts  test_chatfield.py  test_conversation.py  test_conversation_scenarios.py  test_conversations.py  test_conversations.test.ts  test_decorators.py  test_dialogue_class.py  test_dialogue_fields.py  test_dialogue_fields.test.ts  test_field_presence.py  test_field_proxy_str.py  test_gatherer.py  test_gatherer_class.py  test_integration.py  test_interview.py  test_interviewer.py  test_match.py  test_real_llm.py  test_socrates.py  test_transformation_proxy.py  test_valid_property.py
